--- a/views/unread_messages.ejs
+++ b/views/unread_messages.ejs
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unread Messages</title>
 </head>
-
+<form action="/logout" method="GET">
+    <button type="submit" class="btn">Logout</button>
+</form>
 <body>
     <h1>Unread Messages</h1>
     <ul>
