--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -7,7 +7,9 @@
             </strong>: <%= msg.text %> <small>(<%= msg.sent_datetime %>)</small></p>
         <% }); %>
 </div>
-
+<form action="/logout" method="GET">
+    <button type="submit" class="btn">Logout</button>
+</form>
 <!-- Message input -->
 <form action="/send-message/<%= room_id %>" method="POST">
     <textarea name="message" required></textarea>
